--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   },
   "scripts": {
     "build": "tsup --format esm --dts",
-    "dev": "tsup --format esm --dts --watch"
+    "dev": "tsup --format esm --dts --watch",
+    "postinstall": "node scripts/postinstall.js"
   },
   "agentConfig": {
     "pluginType": "elizaos:client:1.0.0",
     "pluginParameters": {
-        "CAPSOLVER_API_KEY":{
-            "type":"string"
-        }
+      "CAPSOLVER_API_KEY": {
+        "type": "string"
+      }
     }
   }
 }
